--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "astro-portabletext": "^0.13.0",
     "astro-seo": "^1.1.0",
     "groq": "^5.12.0",
-    "lenis": "^1.3.17",
+    "nanostores": "^1.1.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "svelte": "^5.53.3"
