add gemini tool

--- a/studio/.env.example
+++ b/studio/.env.example
@@ -2,3 +2,6 @@ SANITY_STUDIO_PROJECT_ID=dxjqqptu
 SANITY_STUDIO_DATASET=production
 PREVIEW_URL=http://localhost:4321
 # Preview URL for Sanity Presentation tool - should match your frontend URL
+
+# Gemini API key for AI image processing tool (get from https://aistudio.google.com/apikey)
+SANITY_STUDIO_GEMINI_API_KEY=
